# igniter

./: Cargo.toml  LICENSE.md  README.md  igniter.toml  make.sh
src/: config.rs  lib.rs  main.rs  os.rs  rpc.rs  settings.rs
src/manager/: job.rs  mod.rs  process.rs  server.rs
src/monitor/: file.rs  mod.rs  process.rs
test/environment/: .igniterc  env.sh
test/error_process/: .igniterc  test_error.sh
