[package]
name = "igniter"
description = "A simple process manager written in Rust"
version = "0.1.0"
authors = ["Paolo Marino <paolomarinos@gmail.com>"]
repository = "https://github.com/pmarino90/igniter"

[dependencies]
config = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
clap = "2.29.1"
ctrlc = { version = "3.0", features = ["termination"] }
nix = "0.9.0"
prettytable-rs = "^0.6"