[package]
name = "igniter"
description = "A simple process manager written in Rust"
license = "MIT"
version = "0.1.2"
readme = "README.md"
keywords = ["process", "process-manager"]
authors = ["Paolo Marino <paolomarinos@gmail.com>"]
repository = "https://github.com/pmarino90/igniter"

[[bin]]
doc = false
path = "src/main.rs"
name = "igniter"

[badges]
travis-ci = { repository = "pmarino90/igniter" }

[dependencies]
config = "0.7.0"
serde = "1.0.27"
serde_json = "1.0.9"
serde_derive = "1.0.27"
clap = "2.29.1"
ctrlc = { version = "3.0", features = ["termination"] }
nix = "0.9.0"
prettytable-rs = "^0.6"
dirs = "1.0.4"