[package]
name = "igniter"
version = "0.1.0"
authors = ["David Vázquez Púa <davazp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
dirs = "2.0.2"
clap = "2.33.0"
serde = {version="1.0.104", features=["derive"]}
serde_json = "1.0"
toml = "0.5.5"